@@ -4,6 +4,7 @@
  - fixed incorrect form closure when only one language enabled in dash settings
  - fixed changed unique index from lang to local on MultilingualPageRelations
  - fixed incomplete object in session problem by storing locale as string as apposed to Zend_Locale
+ - fixed copying of aliases and excluded aliases from page report
  
 # 1.1.2
 - Added exclude from internationalization copy custom attribute
